created chat service with domain registered token call in GRPC

--- a/config/local.env
+++ b/config/local.env
@@ -3,3 +3,5 @@ MONGO_URI = 'mongodb+srv://admin:admin@chatbot0.b24gmvw.mongodb.net/?retryWrites
 SECRET_TOKEN = hellallyo3214
 REDIS_HOST = localhost
 REDIS_PORT = 6379
+USER_GRPC_IP = 192.168.10.16:50051
+
