--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,36 +1,36 @@
 {
-    "compilerOptions": {
-      "sourceMap": true,
-      "module": "commonjs",
-      "target": "es2017",
-      "outDir": "./dist",
-      "baseUrl": "./src",
-      "paths": {
-        "@middlewares": [
-          "middlewares/index"
-        ],
-        "@interfaces": [
-          "interfaces/index"
-        ],
-        "@exceptions": [
-          "exceptions/index"
-        ],
-        "@modules/*": [
-          "modules/*"
-        ]
-      },
-      "alwaysStrict": true,
-      "noImplicitAny": true,
-      "resolveJsonModule": true,
-      "experimentalDecorators": true,
-      "emitDecoratorMetadata": true,
-      "moduleResolution": "node",
-      //"allowSyntheticDefaultImports": true
+  "compilerOptions": {
+    "sourceMap": true,
+    "module": "commonjs",
+    "target": "es2017",
+    "outDir": "./dist",
+    "baseUrl": "./src",
+    "paths": {
+      "@middlewares": [
+        "middlewares/index"
+      ],
+      "@interfaces": [
+        "interfaces/index"
+      ],
+      "@exceptions": [
+        "exceptions/index"
+      ],
+      "@modules/*": [
+        "modules/*"
+      ]
     },
-    "include": [
-      "src/**/*.ts"
-  , "src/server.ts" ],
-    "exclude": [
-      "node_modules"
-    ]
+    "alwaysStrict": true,
+    "noImplicitAny": true,
+    "resolveJsonModule": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "moduleResolution": "node",
+    //"allowSyntheticDefaultImports": true
+  },
+  "include": [
+    "src/**/*.ts"
+, "server.ts" ],
+  "exclude": [
+    "node_modules"
+  ]
 }
