--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "chatbot",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/server.ts",
+  "main": "./server.ts",
   "scripts": {
-    "dev": "nodemon ./src/server.ts",
-    "start": "ts-node ./src/server.ts",
+    "dev": "nodemon ./server.ts",
+    "start": "ts-node ./server.ts",
     "prepare": "is-ci || husky install",
     "build": "tsc",
     "lint": "eslint src/**/*.ts",
@@ -19,15 +19,21 @@
   "author": "Malay Srivastava",
   "license": "ISC",
   "dependencies": {
+    "@grpc/grpc-js": "^1.3.2",
+    "@grpc/proto-loader": "^0.6.2",
+    "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/redis": "^4.0.11",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "domain-ping": "^0.2.1",
     "dotenv": "^16.3.1",
     "eslint": "^8.51.0",
     "express": "^4.18.2",
+    "grpc": "^1.24.11",
+    "grpc-tools": "^1.12.4",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
@@ -35,6 +41,7 @@
     "mongoose": "^7.6.1",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
+    "protobufjs": "^7.2.5",
     "redis": "^4.6.10",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
@@ -42,8 +49,8 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.3",
     "@types/cors": "^2.8.14",
-    "@types/express": "^4.17.19",
-    "@types/node": "^20.8.4",
+    "@types/express": "^4.17.20",
+    "@types/node": "^20.8.8",
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.3",
     "is-ci": "^3.0.1"
