kafka logs added

--- a/config/local.env
+++ b/config/local.env
@@ -4,3 +4,4 @@ SECRET_TOKEN = hellallyo3214
 KAFKA_IP = '192.168.10.149'
 KAFKA_PORT = 9092
 KAFKAJS_NO_PARTITIONER_WARNING = '1';
+USER_GRPC_IP = '172.16.14.221:50051'
